--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".screens.messages.MessagesListActivity"
             android:windowSoftInputMode="adjustPan"
             android:exported="true">
             <intent-filter>
